# smarty-bot

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  smarty-bot.code-workspace
migrations/: env.py
migrations/versions/: de10d5cc2c6b_add_jetton_holder_models.py
src/ton_analyze/: ton_analize.py  ton_get_data.py
src/ton_analyze/models/: base.py
