[tool.poetry]
name = "smarty-bot"
version = "0.1.0"
description = ""
authors = ["Andrei <tech@anlab.io>"]
readme = "README.md"
packages = [{include = "src/telegram_bot"}, {include = "src/ton_analyze"}]


[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
telethon = "^1.36.0"
pytonapi = "0.3.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
